add contact page

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <title>Website Learning With KMD</title>
 </head>
 <body>
      <!-- Nav start  -->
     <section class="mycontainer">
-       <nav class="navar">
+       <nav class="navbar">
     <a href="#" class="logo">
         Doll Shopping
     </a>
@@ -24,10 +24,10 @@
 <div class="home">
     <div class="left">
         <!-- need insert image  -->
-         <img src="https://i.pinimg.com/736x/a3/35/ba/a335ba7406d5c384b41857a9bc3f6cb2.jpg" alt="">
+         <img src="" alt="">
     </div>
     <div class="right">
-        <h1 class="maititle">
+        <h1 class="maintitle">
             My <span>Doll</span> World
         </h1>
         <p>
