--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div>
-        <i class="fas fa-camera"></i>
+        <!-- <i class="fas fa-camera"></i> -->
     </div>
     <!-- Nav start  -->
     <section class="mycontainer">
-       <nav class="navar">
+       <nav class="navbar">
     <a href="#" class="logo">
         Doll Shopping
     </a>
@@ -25,6 +25,33 @@
     </ul>
 </nav>
     <!-- Nav end  -->
+     <!-- start contact page  -->
+      <div class="contactpage">
+        <div class="map">
+            <!-- insert img  -->
+        </div>
+        <div class="detil">
+            <div class="contacttitle">
+                Contact Us
+            </div>
+            <div class="phone">
+                <i class="fas fa-phone contaction"></i>
+                091234567
+            </div>
+            <div class="address">
+                <i class="fas fa-map-marker-alt contaction"></i>
+                2nd Floor
+            </div>
+            <div class="internet">
+                <i class="fas fa-globe contaction"></i>
+                <a href="www.google.com">Unicorn Doll Store</a>
+            </div>
+        </div>
+        <div class="time">
+            <i class="fas fa-clock contaction"></i>
+            Everyday 8AM to 8PM
+        </div>
+      </div>
         
     </section>
     <footer>
