--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
         
     </section>
     <footer>
-        All right reserved Copy right &copy; Jennifer07 2025.
+        All right reserved Copy right &copy; KMD 2025.
     </footer>
 </body>
 </html>
