--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         Doll Shopping
     </a>
     <ul class="links" type="none">
-        <a href="index.html"><li class="link">Home</li></a>
+        <a href="index.html"><li class="link contact">Home</li></a>
         <a href="about.html"><li class="link">About</li></a>
-        <a href="contact.html"><li class="link contact">Contact</li></a>
+        <a href="contact.html"><li class="link">Contact</li></a>
     </ul>
 </nav>
        <!-- Nav end  -->
@@ -41,7 +41,7 @@
         <!-- contact end  -->
     </section>
     <footer>
-        All right reserved Copy right &copy; Jennifer07 2025.
+        All right reserved Copy right &copy; KMD 2025.
     </footer>
     
 </body>
