--- a/about.html
+++ b/about.html
@@ -4,31 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="contact.css">
-    <link rel="stylesheet" href="icon/css/all.min.css">
+    <!-- <link rel="stylesheet" href="contact.css">  -->
+    <!-- <link rel="stylesheet" href="icon/css/all.min.css">  -->
+    <link rel="stylesheet" href="about.css">
     <title>Website Learning With KMD</title>
 </head>
 <body>
-    <div>
-        <i class="fas fa-camera"></i>
-    </div>
+    
     <!-- Nav start  -->
     <section class="mycontainer">
-       <nav class="navar">
+       <nav class="navbar">
     <a href="#" class="logo">
         Doll Shopping
     </a>
     <ul class="links" type="none">
         <a href="index.html"><li class="link">Home</li></a>
-        <a href="about.html"><li class="link">About</li></a>
-        <a href="contact.html"><li class="link contact">Contact</li></a>
+        <a href="about.html"><li class="link contact">About</li></a>
+        <a href="contact.html"><li class="link">Contact</li></a>
     </ul>
 </nav>
     <!-- Nav end  -->
+
+    <!-- start about section  -->
+     <div class="container aboutcontainer">
+        <div class="img aboutimg">
+            <img src="#" alt="">
+        </div>
+        <div class="abouttext">
+            <h1 class="abouttitle">Your Story</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt enim maiores doloremque ducimus velit assumenda a amet debitis officia odio deleniti suscipit totam cumque magnam laudantium, sapiente quod sint voluptates praesentium id. Iure eaque porro iusto magnam sed molestiae labore necessitatibus consequuntur quidem quos. Deleniti iste aut, officia possimus nam laudantium, eaque exercitationem sapiente provident magni autem dolores assumenda impedit maxime amet consequatur ut quod velit deserunt odio tempore facilis dolore. Cupiditate officia sequi, molestiae consequuntur repudiandae quia! Iure vero molestiae nostrum quas nemo commodi! Rerum ea reiciendis eos non ducimus, nisi aperiam numquam dolores, animi expedita quas officiis ipsa laboriosam? Quibusdam quos nulla fugiat, provident dolorum quasi possimus! Sint ipsa nisi quas iste alias nam, labore mollitia unde laboriosam quod perspiciatis magnam deleniti at totam distinctio quo? Ad placeat voluptates, dolores reiciendis, odio ipsa, consequatur impedit quos est libero optio molestiae adipisci officiis exercitationem nostrum dolore delectus animi quam?
+            </p>
+        </div>
+     </div>
         
     </section>
     <footer>
-        All right reserved Copy right &copy; Jennifer07 2025.
+        All right reserved Copy right &copy; KMD 2025.
     </footer>
 </body>
 </html>
