--- a/product.html
+++ b/product.html
@@ -289,12 +289,256 @@
                         <!-- end card 4  -->
                     </div>
                     <!-- end barbie doll  -->
+
+                    <!-- start giant doll  -->
+                    <div class="imgbox">
+                        <!-- start card 1  -->
+                        <div class="card" data-info="giant">
+                            <div class="cardimg">
+                                <img src="image/giant1.jpeg" alt="">
+                            </div>
+                            <div class="cardfooter">
+                                <p class="dollname">
+                                    Caroline crochetdoll
+                                </p>
+                                <p class="price">
+                                    price - <span>290$</span>
+                                </p>
+                                <a href="buy.html">
+                                    <button type="button">Buy</button>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- end card 1  -->
+
+                        <!-- start card 2  -->
+                        <div class="card" data-info="giant">
+                            <div class="cardimg">giant
+                                <img src="image/giant2.jpeg" alt="">
+                            </div>
+                            <div class="cardfooter">
+                                <p class="dollname">
+                                    Caroline crochetdoll
+                                </p>
+                                <p class="price">
+                                    price - <span>290$</span>
+                                </p>
+                                <a href="buy.html">
+                                    <button type="button">Buy</button>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- end card 2  -->
+
+                        <!-- start card 3  -->
+                        <div class="card" data-info="giant">
+                            <div class="cardimg">
+                                <img src="image/giant3.jpeg" alt="">
+                            </div>
+                            <div class="cardfooter">
+                                <p class="dollname">
+                                    Caroline crochetdoll
+                                </p>
+                                <p class="price">
+                                    price - <span>290$</span>
+                                </p>
+                                <a href="buy.html">
+                                    <button type="button">Buy</button>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- end card 3  -->
+
+                        <!-- start card 4  -->
+                        <div class="card" data-info="giant">
+                            <div class="cardimg">
+                                <img src="image/giant4.jpeg" alt="">
+                            </div>
+                            <div class="cardfooter">
+                                <p class="dollname">
+                                    Caroline crochetdoll
+                                </p>
+                                <p class="price">
+                                    price - <span>290$</span>
+                                </p>
+                                <a href="buy.html">
+                                    <button type="button">Buy</button>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- end card 4  -->
+                    </div>
+                    <!-- end giant doll  -->
+
+                    <!-- start super doll  -->
+                    <div class="imgbox">
+                        <!-- start card 1  -->
+                        <div class="card" data-info="super">
+                            <div class="cardimg">
+                                <img src="image/super1.jpeg" alt="">
+                            </div>
+                            <div class="cardfooter">
+                                <p class="dollname">
+                                    Caroline crochetdoll
+                                </p>
+                                <p class="price">
+                                    price - <span>290$</span>
+                                </p>
+                                <a href="buy.html">
+                                    <button type="button">Buy</button>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- end card 1  -->
+
+                        <!-- start card 2  -->
+                        <div class="card" data-info="super">
+                            <div class="cardimg">giant
+                                <img src="image/super2.png" alt="">
+                            </div>
+                            <div class="cardfooter">
+                                <p class="dollname">
+                                    Caroline crochetdoll
+                                </p>
+                                <p class="price">
+                                    price - <span>290$</span>
+                                </p>
+                                <a href="buy.html">
+                                    <button type="button">Buy</button>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- end card 2  -->
+
+                        <!-- start card 3  -->
+                        <div class="card" data-info="super">
+                            <div class="cardimg">
+                                <img src="image/super3.jpeg" alt="">
+                            </div>
+                            <div class="cardfooter">
+                                <p class="dollname">
+                                    Caroline crochetdoll
+                                </p>
+                                <p class="price">
+                                    price - <span>290$</span>
+                                </p>
+                                <a href="buy.html">
+                                    <button type="button">Buy</button>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- end card 3  -->
+
+                        <!-- start card 4  -->
+                        <div class="card" data-info="super">
+                            <div class="cardimg">
+                                <img src="image/super4.jpeg" alt="">
+                            </div>
+                            <div class="cardfooter">
+                                <p class="dollname">
+                                    Caroline crochetdoll
+                                </p>
+                                <p class="price">
+                                    price - <span>290$</span>
+                                </p>
+                                <a href="buy.html">
+                                    <button type="button">Buy</button>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- end card 4  -->
+                    </div>
+                    <!-- end super doll  -->
+
+                    <!-- start totoro doll  -->
+                    <div class="imgbox">
+                        <!-- start card 1  -->
+                        <div class="card" data-info="totoro">
+                            <div class="cardimg">
+                                <img src="image/totoro1.png" alt="">
+                            </div>
+                            <div class="cardfooter">
+                                <p class="dollname">
+                                    Caroline crochetdoll
+                                </p>
+                                <p class="price">
+                                    price - <span>290$</span>
+                                </p>
+                                <a href="buy.html">
+                                    <button type="button">Buy</button>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- end card 1  -->
+
+                        <!-- start card 2  -->
+                        <div class="card" data-info="totoro">
+                            <div class="cardimg">giant
+                                <img src="image/totoro2.jpeg" alt="">
+                            </div>
+                            <div class="cardfooter">
+                                <p class="dollname">
+                                    Caroline crochetdoll
+                                </p>
+                                <p class="price">
+                                    price - <span>290$</span>
+                                </p>
+                                <a href="buy.html">
+                                    <button type="button">Buy</button>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- end card 2  -->
+
+                        <!-- start card 3  -->
+                        <div class="card" data-info="totoro">
+                            <div class="cardimg">
+                                <img src="image/totoro3.jpeg" alt="">
+                            </div>
+                            <div class="cardfooter">
+                                <p class="dollname">
+                                    Caroline crochetdoll
+                                </p>
+                                <p class="price">
+                                    price - <span>290$</span>
+                                </p>
+                                <a href="buy.html">
+                                    <button type="button">Buy</button>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- end card 3  -->
+
+                        <!-- start card 4  -->
+                        <div class="card" data-info="totoro">
+                            <div class="cardimg">
+                                <img src="image/totoro4.png" alt="">
+                            </div>
+                            <div class="cardfooter">
+                                <p class="dollname">
+                                    Caroline crochetdoll
+                                </p>
+                                <p class="price">
+                                    price - <span>290$</span>
+                                </p>
+                                <a href="buy.html">
+                                    <button type="button">Buy</button>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- end card 4  -->
+                    </div>
+                    <!-- end totoro doll  -->
                 </div>
 
             </div>
 
 
         </section>
+        <footer>
+            All right reserved Copy Right &copy;KMD 2025
+        </footer>
+        <script src="#"></script>
 
 </body>
 
