--- a/product.html
+++ b/product.html
@@ -538,7 +538,7 @@
         <footer>
             All right reserved Copy Right &copy;KMD 2025
         </footer>
-        <script src="#"></script>
+        <script src="product.js"></script>
 
 </body>
 
